--- a/DeltaStruct.ConsoleTest/DeltaStruct.ConsoleTest.csproj
+++ b/DeltaStruct.ConsoleTest/DeltaStruct.ConsoleTest.csproj
@@ -8,7 +8,8 @@
   <ItemGroup>
     <ProjectReference Include="..\DeltaStruct.Generators\DeltaStruct.Generators.csproj" 
                       OutputItemType="Analyzer"
-                      ReferenceOutputAssembly="false" />
+                      ReferenceOutputAssembly="false" 
+                      PrivateAssets="all" />
     <ProjectReference Include="..\DeltaStruct\DeltaStruct.csproj" />
   </ItemGroup>
 
