--- a/DeltaStruct/DeltaStruct.csproj
+++ b/DeltaStruct/DeltaStruct.csproj
@@ -3,5 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\DeltaStruct.Generators\DeltaStruct.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" PrivateAssets="all" />
+  </ItemGroup>
 </Project>
