--- a/QuesoStruct.Generators/QuesoStruct.Generators.csproj
+++ b/QuesoStruct.Generators/QuesoStruct.Generators.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackFolder>analyzers\dotnet\cs</PackFolder>
+    <PackSymbols>false</PackSymbols>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.9.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0" Pack="false" />
   </ItemGroup>
 
 </Project>
