--- a/QuesoStruct.Generators/QuesoStruct.Generators.csproj
+++ b/QuesoStruct.Generators/QuesoStruct.Generators.csproj
@@ -2,12 +2,42 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <PackFolder>analyzers\dotnet\cs</PackFolder>
-    <PackSymbols>false</PackSymbols>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <PackageId>QuesoStruct.Generators</PackageId>
+    <Title>QuesoStruct.Generators</Title>
+    <Description>A delicious binary serialization library that says no to boilerplate and yes to great code and design.</Description>
+    <PackageVersion>1.0.1</PackageVersion>
+    <RepositoryUrl>https://github.com/yodadude2003/QuesoStruct</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <ProjectUrl>https://github.com/yodadude2003/QuesoStruct</ProjectUrl>
+    <Authors>Yodadude2003</Authors>
+    <Owners>Chosen Few Software</Owners>
+    <Copyright>Copyright (c) 2021 Chosen Few Software</Copyright>
+    <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <!--<PackageIcon>icon.png</PackageIcon>-->
+    <PackageTags>binary-files serialization source-generation automation framework cheese</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0" Pack="false" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0" PrivateAssets="all" GeneratePathProperty="true" />
+  </ItemGroup>
+
+  <PropertyGroup>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <!-- Generates a package at build -->
+    <IncludeBuildOutput>false</IncludeBuildOutput>
+    <!-- Do not include the generator as a lib dependency -->
+  </PropertyGroup>
+
+  <ItemGroup>
+    <!-- Package the generator in the analyzer directory of the nuget package -->
+    <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+
+    <!-- Package the Newtonsoft.Json dependency alongside the generator assembly -->
+    <None Include="$(PkgMicrosoft_CodeAnalysis_CSharp)\lib\netstandard2.0\*.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
   </ItemGroup>
 
 </Project>
