--- a/QuesoStruct/QuesoStruct.csproj
+++ b/QuesoStruct/QuesoStruct.csproj
@@ -8,7 +8,7 @@
     <PackageId>QuesoStruct</PackageId>
     <Title>QuesoStruct</Title>
     <Description>A delicious binary serialization library that says no to boilerplate and yes to great code and design.</Description>
-    <Version>1.0.6</Version>
+    <Version>1.0.7</Version>
     <RepositoryUrl>https://github.com/yodadude2003/QuesoStruct</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <ProjectUrl>https://github.com/yodadude2003/QuesoStruct</ProjectUrl>
@@ -21,6 +21,10 @@
     <PackageTags>binary-files serialization source-generation automation framework cheese</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Types\Collections\Collection.cs~RF99d27a.TMP" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\QuesoStruct.Generators\QuesoStruct.Generators.csproj" OutputItemType="Analyzer" />
